<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/title_activity"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/com_food_phone"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/notification_information_progress_red"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/com_food_phone" />

        <TextView
            android:id="@+id/com_public_service"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/notification_information_progress_yellow"
            android:gravity="center"
            android:text="@string/com_public_service" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/com_carrieroperator"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/notification_information_progress_bg"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/com_carrieroperator" />

        <TextView
            android:id="@+id/com_fast_mail_service"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/notification_information_progress_green"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/com_fast_mail_service" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/com_air_ticket_hotel"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/notification_information_progress_red"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/com_air_ticket_hotel" />

        <TextView
            android:id="@+id/com_bank_securities"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/notification_information_progress_bg"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/com_bank_securities" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/com_Insurance_services"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/notification_information_progress_yellow"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/com_Insurance_services" />

        <TextView
            android:id="@+id/com_sale_service"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/notification_information_progress_green"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/com_sale_service" />
    </LinearLayout>

</LinearLayout>